--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,29 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<p id="notice" ><%= notice %></p>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto col-11 col-sm-10 col-mg-8 col-xl-6">
+      <h1>
+        Welcome to<i class="fas fa-book"></i>
+        <strong>Bookers</strong>
+        !!
+      </h1>
+      <p>
+        In<i class="fas fa-book"></i><strong>Bookers,</strong>
+      </p>
+      <p>
+        you can share and exchange your opinions , inpression , and emotions
+      </p>
+      <p>
+        about various books!
+      </p>
+      <div class="btn-wrapper col-10 mx-auto">
+        <div class="row">
+          <%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-sm mb-3 btn-block" %>
+        </div>
+        <div class="row">
+          <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-sm mb-3 btn-block" %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
