--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,7 @@
         </div>
      </nav>
   </header>
-    <%= notice %>
+   <p id="notice" ><%= notice %></p>
     <%= yield %>
     <footer>
       <div class="container mt-5">
