--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,49 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <!--ユーザー情報-->
+      <%= render "users/info" , user: current_user %>
+      <div class="row">
+        <%= link_to  edit_user_path(current_user), class:"btn btn-outline-secondary btn-block" do %>
+        <i class="fas fa-user-cog"></i>
+        <% end %>
+      </div>
+      <h2 class="mt-3">New Book</h2>
+      <%= form_with model: @book, url: books_path, method: :post do |f| %>
+        <div class="form-group">
+          <%= f.label :Title %> </br>
+          <%= f.text_field :title,  autofocus: true, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :Opinion%> </br>
+          <%= f.text_area :body, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.submit "Create Book", class:"btn btn-success"%>
+        </div>
+      <% end %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+        <table class="table table hover  table-inverse">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Title</th>
+              <th>Opinion</th>
+            </tr>
+          </thead>
+          <% @books.each do |book|%>
+          <tbody>
+            <tr>
+              <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+              <td><%= link_to book.title, book_path(book) %></td>
+              <td><%= book.body %></td>
+            </tr>
+          </tbody>
+          <% end %>
+        </table>
+    </div>
+  </div>
+</div>
