--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -4,11 +4,11 @@
         <tr></tr>
         <tr>
             <th>name</th>
-            <th><%= @user.name %></th>
+            <th><%= user.name %></th>
         </tr>
         <tr>
             <th>introduction</th>
-            <th><%= @user.introduction %></th>
+            <th><%= user.introduction %></th>
         </tr>
     </tbody>
 </table>
