--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,7 +10,7 @@
         <% end %>
       </div>
       <h2 class="mt-3">New Book</h2>
-      <%= form_with model: @book, url: books_path, method: :post do |f| %>
+      <%= form_with model: @book_new, url: books_path, method: :post do |f| %>
         <div class="form-group">
           <%= f.label :Title %> </br>
           <%= f.text_field :title,  autofocus: true, class: "form-control" %>
@@ -35,8 +35,18 @@
                   <%= @book.user.name %>
                 <% end %>
               </td>
-              <td><%= link_to @book.title, book_path(@book) %></td>
-              <td><%= @book.body %></td>
+              <td>
+                  <%= link_to @book.title, book_path(@book) %>
+              </td>
+              <td>
+                  <%= @book.body %>
+              </td>
+              <td>
+                <%= link_to "Edit", edit_user_path(@book.user.id), class: "btn btn-success btn-sm"%>
+              </td>
+              <td>
+                <%= link_to "Destroy",book_path(@book.user.id), method: :delete, class: "btn btn-danger btn-sm" %>
+              </td>
             </tr>
           </tbody>
         </table>
