--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -42,10 +42,10 @@
                   <%= @book.body %>
               </td>
               <td>
-                <%= link_to "Edit", edit_user_path(@book.user.id), class: "btn btn-success btn-sm"%>
+                <%= link_to "Edit", edit_book_path(@book), class: "btn btn-success btn-sm"%>
               </td>
               <td>
-                <%= link_to "Destroy",book_path(@book.user.id), method: :delete, class: "btn btn-danger btn-sm" %>
+                <%= link_to "Destroy",book_path(@book), method: :delete, class: "btn btn-danger btn-sm" %>
               </td>
             </tr>
           </tbody>
