--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,23 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h2 class="mt-3">Editing Book</h2>
+      <%= form_with model: @book, url: book_path, method: :put do |f| %>
+        <div class="form-group">
+          <%= f.label :Title %> </br>
+          <%= f.text_field :title,  autofocus: true, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :Opinion%> </br>
+          <%= f.text_area :body, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.submit "Update Book", class:"btn btn-success"%>
+        </div>
+      <% end %>
+       <%= link_to "Show", book_path(@book) %>
+        |
+    <%= link_to "Back", books_path %>
+    </div>
+  </div>
+</div>
