[Update]edit/ユーザー権限

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,7 +25,7 @@
       <% end %>
     </div>
     <div class="col-md-8 offset-md-1">
-      <h2>Books</h2>
+      <h2>Book details</h2>
         <table class="table table hover  table-inverse">
           <tbody>
             <tr>
@@ -41,12 +41,14 @@
               <td>
                   <%= @book.body %>
               </td>
+              <% if @book.user_id == current_user.id %>
               <td>
                 <%= link_to "Edit", edit_book_path(@book), class: "btn btn-success btn-sm"%>
               </td>
               <td>
-                <%= link_to "Destroy",book_path(@book), method: :delete, class: "btn btn-danger btn-sm" %>
+                <%= link_to "Destroy",book_path(@book), method: :delete, data: {confirm: '本当に消しますか？'}, class: "btn btn-danger btn-sm" %>
               </td>
+              <% end %>
             </tr>
           </tbody>
         </table>
