--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,25 +4,8 @@
       <h2>User info</h2>
       <!--ユーザー情報-->
       <%= render "users/info" , user: current_user %>
-      <div class="row">
-        <%= link_to  edit_user_path(current_user), class:"btn btn-outline-secondary btn-block" do %>
-        <i class="fas fa-user-cog"></i>
-        <% end %>
-      </div>
       <h2 class="mt-3">New Book</h2>
-      <%= form_with model: @book, url: books_path, method: :post do |f| %>
-        <div class="form-group">
-          <%= f.label :Title %> </br>
-          <%= f.text_field :title,  autofocus: true, class: "form-control" %>
-        </div>
-        <div class="form-group">
-          <%= f.label :Opinion%> </br>
-          <%= f.text_area :body, class: "form-control" %>
-        </div>
-        <div class="form-group">
-          <%= f.submit "Create Book", class:"btn btn-success"%>
-        </div>
-      <% end %>
+      <%= render "books/new_book", book: @book %>
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
