--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,33 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <!--ユーザー情報-->
+       <%= render "info", user: current_user %>
+      <h2 class="mt-3">New Book</h2>
+       <!--投稿フォーム-->
+       <%= render "books/new_book", book: @book %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>User</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <% @users.each do |user| %>
+        <tbody>
+          <tr>
+            <td><%= image_tag user.get_profile_image(80,80) %></td>
+            <td><%= user.name %></td>
+            <td><%= link_to "Show", user_path(user) %></td>
+          </tr>
+        </tbody>
+         <% end %>
+      </table>
+    </div>
+  </div>
+</div>
