--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,24 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h2>User info</h2>
+      <%= form_with model: @user, url: user_path(@user), method: :put do |f| %>
+        <div class="form-group">
+          <%= f.label :Name %> </br>
+          <%= f.text_field :name, autofocus: true,class: "form-control name"%>
+        </div>
+        <div class="form-group">
+          <%= f.label :Image %> </br>
+          <%= f.file_field :image, accept: "image/*" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :Introduction %> </br>
+          <%= f.text_area :introduction ,class: "form-control name" %>
+        </div>
+        <div class="form-group">
+          <%= f.submit "Update User", class: "btn btn-secondary "%>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
