--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,14 @@
 <div class="container">
+   <div class="error_messages">
+      <% if @book.errors.any? %>
+        <%= @book.errors.count %>errors prohibited this obj from being saved:
+        <ul>
+          <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+         <% end %>
+        </ul>
+      <% end %>
+    </div>
   <div class="row">
     <div class="col-md-3">
       <h2>User info</h2>
