--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,14 @@
 <div class="container">
+  <div class="error_messages">
+      <% if @user.errors.any? %>
+        <%= @user.errors.count %>errors prohibited this obj from being saved:
+        <ul>
+          <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+         <% end %>
+        </ul>
+      <% end %>
+    </div>
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h2>User info</h2>
