--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,7 +4,7 @@
       <h2>User info</h2>
       <!--ユーザー情報-->
       <%= render "users/info" , user: current_user %>
-      <h2 class="mt-3">New Book</h2>
+      <h2 class="mt-3">New book</h2>
       <%= form_with model: @book_new, url: books_path, method: :post do |f| %>
         <div class="form-group">
           <%= f.label :Title %> </br>
