--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
               <% if user_signed_in? %>
 
               <li>
-                <%= link_to root_path, class: 'nav-link text-light' do %>
+                <%= link_to user_path(current_user), class: 'nav-link text-light' do %>
                   <i class="fas fa-home"></i>Home
                 <% end %>
               </li>
@@ -56,7 +56,7 @@
                 <% end %>
               </li>
               <li>
-                <%= link_to about_path, class: 'nav-link text-light' do %>
+                <%= link_to home_about_path, class: 'nav-link text-light' do %>
                   <i class="fas fa-link"></i>About
                 <% end %>
               </li>
