--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -12,8 +12,14 @@
         </tr>
     </tbody>
 </table>
-<div class="row">
-        <%= link_to  edit_user_path(current_user), class:"btn btn-outline-secondary btn-block" do %>
-        <i class="fas fa-user-cog"></i>
+ <div class="row">
+     <% if user == current_user %>
+      <%= link_to  edit_user_path(current_user), class:"btn btn-outline-secondary btn-block" do %>
+         <i class="fas fa-user-cog"></i>
+      <% end %>
+      <% else %>
+        <%= link_to  user_path(current_user), class:"btn btn-outline-secondary btn-block" do %>
+         <i class="fas fa-user-cog"></i>
         <% end %>
-      </div>
+      <% end%>
+ </div>
