--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
       <h2>User info</h2>
       <!--ユーザー情報-->
        <%= render "info", user: current_user %>
-      <h2 class="mt-3">New Book</h2>
+      <h2 class="mt-3">New book</h2>
        <!--投稿フォーム-->
        <%= render "books/new_book", book: @book %>
     </div>
