[fix]profile_image

--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag current_user.get_profile_image(100,100) %>
+<%= image_tag user.get_profile_image(100,100) %>
 <table class="table">
     <tbody>
         <tr></tr>
