--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-3">
       <h2>User info</h2>
       <!--ユーザー情報-->
-      <%= render "users/info" , user: current_user %>
+      <%= render "users/info" , user: @book.user %>
       <h2 class="mt-3">New book</h2>
       <%= form_with model: @book_new, url: books_path, method: :post do |f| %>
         <div class="form-group">
